noinst_LIBRARIES = libbubi_utils.a

libbubi_utils_a_CXXFLAGS =	-std=c++11 -DASIO_STANDALONE \
							-I$(top_srcdir)/src/3rd/linux/include \
							$(NULL)

libbubi_utils_a_SOURCES =	file.cpp \
							logger.cpp \
							net.cpp \
							thread.cpp \
							timestamp.cpp \
							utils.cpp  \
							crypto.cpp \
							lrucache.hpp \
							noncopyable.h \
							timer.cpp \
							timestamp.cpp \
							system.cpp\
							$(NULL)

 
